[ORBI-1] fixed terrain